// AccessibilityIds.swift
// Created by Anastasiya Kudasheva

import Foundation

public enum AccessibilityIds {
	public enum VC {
		public static let nameLabel = "nameLabel"
		public static let catNameLabel = "catNameLabel"
		public static let noteLabel = "noteLabel"
		public static let catNoteLabel = "catNoteLabel"
		public static let leftBarButtonItem = "leftBarButtonItem"
		public static let rightBarButtonItem = "rightBarButtonItem"
		public static let navigationBar = "navigationBar"
	}
	
	public enum Alert {
		public static let nameTF = "nameTextField"
		public static let noteTF = "noteTextField"
		public static let view = "alertView"
	}
}
