...
			textField.placeholder = "Имя"
		}
		alert.addTextField { textField in
			textField.text = note
			textField.placeholder = "Заметка"
		}
		alert.addAction(UIAlertAction(title: "Отмена", style: .cancel))
		alert.addAction(UIAlertAction(title: "Coхранить", style: .default) { _ in
			completion?(CatNote(name: alert.textFields?[0].text,
								note: alert.textFields?[1].text))
		})

		delegate?.present(alert: alert, animated: true)
...
