...
												style: .plain,
												target: self,
												action: #selector(self.removeButtonDidTapped))
		self.navigationItem.leftBarButtonItem = leftBarButtonItem

		self.navigationController?.navigationBar.prefersLargeTitles = true
		self.navigationController?.navigationBar.topItem?.title = "Котозаметки"
	}

	// Установка вью
	override func viewWillAppear(_ animated: Bool) {
		super.viewWillAppear(animated)

...
